--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <h1>Creative Coding</h1>
+<h2>Examples</h2>
 <ul>
   <li><a href="example-01.html">example-01.html</a></li>
   <li><a href="example-02.html">example-02.html</a></li>
@@ -16,6 +17,12 @@
   <li><a href="example-10-drag.html">example-10-drag.html</a></li>
   <li><a href="example-20-fireworks.html">example-20-fireworks.html</a></li>
   <li><a href="example-30-forcemap.html">example-30-forcemap.html</a></li>
+</ul>
+
+<h2>Resource</h2>
+<ul>
+<li><a href="https://github.com/ics-ikeda/240613_creative_coding/archive/refs/heads/main.zip">Download as ZIP</a></li>
+<li><a href="https://github.com/ics-ikeda/240613_creative_coding">GitHub</a></li>
 </ul>
 </body>
 </html>
